try fixed docker build issue